# PromptOptimization

./: .gitignore  .openrouter.env  build_math500_induce_from_results.py  create_distribution_charts.py  math_instruction_comparison.py  oss_test.py  pyproject.toml  requirements.txt
DAPO/: README.md  dapo_evaluator.py  initial_results_iter_1.json  run_dapo_evaluation.py
DAPO/results/: README.md
InstructZero/InstructZero/experiments/: .run_instructzero.py.swp  args.py  instruction_coupled_kernel.py  misc.py  quick_eval.py  run_instructzero.py  run_instructzero.sh
InstructZero/InstructZero/experiments/automatic_prompt_engineer/: llm.py
InstructZero/InstructZero/experiments/data/instruction_induction/raw/execute/: math500_highconf.json
InstructZero/InstructZero/experiments/data/instruction_induction/raw/induce/: math500_highconf.json
InstructZero/InstructZero/experiments/evaluation/instruction_induction/: exec_accuracy.py
MATH500/: README.md  math500_evaluator.py  run_math500_evaluation.py
MATH500/results/: README.md
Results/: math500_20b_results_summary.csv
docs/: Scoring_Reasoning_Chains_in_LIMO.md
scorer/: README.md  datatypes.py  expo_es_scorer.py  expo_scorer.py  trainer.py  utils.py
tests/: test_scorer.py
