[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-optimization-scorer"
version = "0.1.0"
description = "Single-hidden-layer MLP scorer for prompt optimization (EXPO / EXPO-ES)"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24,<3", "torch>=2.2,<3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
